@startuml
allowmixing
title GC2D HDF5-to-Guiding-Center Dynamics

left to right direction

skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 28
skinparam ranksep 55
skinparam defaultTextAlignment left
skinparam classAttributeIconSize 0
skinparam wrapWidth 240

hide circle
hide empty members

class "GC2D HDF5 file" as HDF5Source <<data>> {
  Stores the spatial mesh, frequencies,
  complex potential fields and metadata
  produced by GC2D.
}

rectangle "<b>load_gc2d_h5_potential</b>\n<i>src/potential/gc2d_h5.py</i>\n\nReads a GC2D HDF5 result, selects and optionally\nfilters its modes, rescales the physical quantities,\nmaps coordinates by characteristic length or to a unit box,\nand builds an interpolation-ready potential." as ImportPipeline

class "GC2DH5Metadata" as H5Metadata <<src/potential/gc2d_h5.py>> {
  Groups immutable dimensional provenance:
  source axes, frequencies, field indices,
  normalization scales and spatial mode,
  attributes and path.
}

class "Potential" as PotentialRuntime <<src/potential/potential.py>> {
  Represents a real mean field and
  positive-frequency complex modes.
  --
  Reconstructs the time-dependent potential and
  its space/time derivatives through interpolation.
  Supports finite-Larmor-radius gyroaveraging.
}

note right of PotentialRuntime
  Runtime phase: exp(+i 2*pi*f_j*t)
  Artificial and imported fields use one convention
end note

class "GuidingCenterDynamics" as GCDynamics <<src/dynamics/gc.py>> {
  Couples a potential to the two-dimensional
  guiding-center equations of motion.
  --
  Provides the vector field, its Jacobians and the
  Hamiltonian quantities required by integrators.
  Uses a gyroaveraged potential when rho is nonzero.
}

class "Grid" as GridSupport <<src/potential/grid.py>> {
  Describes the regular periodic domain on which
  a potential is sampled and interpolated.
  --
  Builds coordinate axes and wraps arbitrary points
  back into the fundamental domain.
}

rectangle "<b>split_components</b>\n<i>src/dynamics/_layout.py</i>\nSeparates a packed ensemble state into one array\nper physical component.\n\n<b>pack_components</b>\nCombines component arrays into the packed layout\nexpected by the dynamics and integrators." as StateLayout

' HDF5 import and runtime construction.
HDF5Source --> ImportPipeline : input
ImportPipeline --> PotentialRuntime : output
ImportPipeline --> H5Metadata : creates
PotentialRuntime o--> H5Metadata : optional metadata
PotentialRuntime --> GCDynamics : potential

' Composition and function calls.
PotentialRuntime *-right- GridSupport : grid
GCDynamics --> PotentialRuntime : potential
GCDynamics ..> StateLayout : uses

PotentialRuntime -[hidden]- StateLayout
GridSupport -[hidden]- StateLayout

@enduml
